cmake_minimum_required(VERSION 3.12)

project(CppCmakeTutorial VERSION 1.0.0 LANGUAGES CXX)

# add_subdirectory("1_HelloWorld")
# add_subdirectory("2_BasicProject")
# add_subdirectory("3_IntermediateProject")
# add_subdirectory("4_VariablesAndOptions")
add_subdirectory("5_BetterProjectStructure")
# add_subdirectory("6_ExternalLibraries")
# add_subdirectory("7_ConanPackages")
# add_subdirectory("8_DoxygenDocumentation")
# add_subdirectory("9_UnitTesting")
# add_subdirectory("10_CodeCoverage")
# add_subdirectory("11_BenchmarkingAndLogging")
# add_subdirectory("12_FinalCppTemplate")
