cmake_minimum_required(VERSION 3.14)

project(CppCmakeTutorial VERSION 1.0.0 LANGUAGES CXX)

# add_subdirectory("1_HelloWorld")
# add_subdirectory("2_BasicProject")
# add_subdirectory("3_IntermediateProject")
# add_subdirectory("4_VariablesAndOptions")
# add_subdirectory("5_BetterProjectStructure")
# add_subdirectory("6_ExternalLibraries")
# add_subdirectory("7_ConanPackages")
# add_subdirectory("8_ExternalLibraries2")
# add_subdirectory("9_DoxygenDocumentation")
# add_subdirectory("10_UnitTesting")
add_subdirectory("11_CodeCoverage")
# add_subdirectory("12_BenchmarkingAndLogging")
# add_subdirectory("13_CommandLineArguments")
# add_subdirectory("14_FinalCppTemplate")
